add activity heartbeat timeout check

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -19,7 +19,9 @@ swe {
   }
 
   activity {
-    defaultHeartBeatTimeout = 10
-    defaultStartToEndTimeout = 120
+    defaultHeartBeatTimeout = 10 seconds
+    defaultHeartBeatTimeoutCheckAppend = 60 seconds
+    defaultStartToEndTimeout = 120 seconds
+    checkInterval = 60 seconds
   }
 }
