--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,6 +12,13 @@ akka {
 }
 
 
+h2mem1 = {
+  url = "jdbc:h2:mem:test1"
+  driver = org.h2.Driver
+  connectionPool = disabled
+  keepAliveConnection = true
+}
+
 swe {
   server {
     addr = "0.0.0.0"
