add slick config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -19,6 +19,18 @@ h2mem1 = {
   keepAliveConnection = true
 }
 
+db {
+  default {
+    driver = "slick.driver.MySQLDriver$"
+    db {
+      driver = "com.mysql.jdbc.Driver"
+      url = "jdbc:mysql://localhost/slicktest?characterEncoding=UTF-8"
+      user = "root"
+      password = ""
+    }
+  }
+}
+
 swe {
   server {
     addr = "0.0.0.0"
