add ended tasks history limitation

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -23,5 +23,7 @@ swe {
     defaultHeartBeatTimeoutCheckAppend = 60 seconds
     defaultStartToEndTimeout = 120 seconds
     checkInterval = 60 seconds
+    maxEndedStoreNum = 1000
+    maxEventNum = 100
   }
 }
