add poll interval function

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -3,5 +3,6 @@ swe {
     defaultHeartBeatTimeout = 5 seconds
     defaultHeartBeatTimeoutCheckAppend = 1 seconds
     checkInterval = 2 seconds
+    pollInterval = 3 seconds
   }
 }
