feature: activity passive poll

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -24,6 +24,9 @@ swe {
     defaultStartToEndTimeout = 120 seconds
     checkInterval = 60 seconds
     pollInterval = 10 seconds
+
+    longPollTimeout = 50 seconds
+    passivePollInterval = 1 seconds
     maxEndedStoreNum = 1000
     maxEventNum = 100
   }
