--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -4,5 +4,8 @@ swe {
     defaultHeartBeatTimeoutCheckAppend = 1 seconds
     checkInterval = 2 seconds
     pollInterval = 3 seconds
+
+    longPollTimeout = 5 seconds
+    passivePollInterval = 100 milliseconds
   }
 }
